truth: update manpage

--- a/truth/truth.1
+++ b/truth/truth.1
@@ -44,13 +44,19 @@ is perfectly legal. The following, however, is not:
 .EE
 
 .P
-The language defines three different operations:
+The language defines several different operations:
 .I "AND"
 ,
 .I "OR"
+,
+.I "XOR"
+,
+.I "NOR"
+,
+.I "NAND"
 and
 .I "NOT"
-\.
+.P
 .I "NOT"
 takes a single operand after the operator. The remaining two take one before and
 one after. As only a single operator is permitted per statement, operator
