truth: fix mislabeled full adder circuit
Full adder was mislabeled a half adder in examples in manpage.

--- a/truth/truth.1
+++ b/truth/truth.1
@@ -76,11 +76,11 @@ Alternatively
 .EX
 	A NAND B
 .EE
-.SS Half adder (sum)
+.SS Full adder (sum)
 .EX
 	(A XOR B) XOR C
 .EE
-.SS Half adder (carry flag)
+.SS Full adder (carry flag)
 .EX
 	(A AND B) OR ((A XOR B) AND C)
 .EE
